Cambiando toda la bbdd y swagger.yml
