# inditex/src/main/java/com/bncn/inditex/controller/ProductController.java
@@ -1,26 +1,26 @@
 package com.bncn.inditex.controller;
 
-import com.bncn.inditex.dto.Product;
-import com.bncn.inditex.service.ProductService;
+import com.bncn.inditex.dto.Price;
+import com.bncn.inditex.service.PriceService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
 
+import java.time.LocalDate;
 import java.util.List;
 
 @RestController
-@RequestMapping("/products")
+@RequestMapping("/api/prices")
 public class ProductController {
 
     @Autowired
-    private ProductService productService;
+    private PriceService priceService;
 
     @GetMapping
-    public List<Product> listProducts() {
-        return productService.findAll();
-    }
+    public List<Price> getPrices(
+            @RequestParam("applicationDate") String applicationDateStr,
+            @RequestParam("productId") Integer productId,
+            @RequestParam("brandId") Integer brandId) {
 
-    @GetMapping("/{id}")
-    public Product getProductById(@PathVariable String id) {
-        return productService.findById(id);
+        return priceService.findPrices(productId, brandId, applicationDateStr);
     }
 }
